[package]
name = "with_closure"
version = "0.1.1"
edition = "2021"
description = "Ensure that the `noalias` optimization takes effect by expanding to closure call"
keywords = ["noalias", "with"]
categories = ["no-std"]
repository = "https://github.com/823984418/with_closure"
license = "MIT OR Apache-2.0"
